--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 250px;
 }
 
 .login-text {
@@ -185,4 +186,66 @@ body {
   font-weight: 500;
   color: #6c717a;
   border-top: 1px solid #e1e6ef;
+}
+
+/* MAIN PAGE */
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f3f5f6;
+}
+
+.desc {
+  width: 600px;
+  height: 446px;
+  gap: 0px;
+  opacity: 0px;
+  /* border: 1px solid black; */
+}
+
+.content-head {
+  width: 600px;
+  height: 48px;
+  padding: 0px 0px 32px 0px;
+  gap: 10px;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 15.6px;
+  letter-spacing: 1.5px;
+  text-align: left;
+  color: #3c3c43;
+}
+
+.content-title {
+  width: 600px;
+  height: 90px;
+  padding: 0px 0px 32px 0px;
+  gap: 10px;
+  opacity: 0px;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 57.6px;
+  letter-spacing: 0.25px;
+  text-align: left;
+  color: #000000;
+}
+
+.content-desc {
+  width: 600px;
+  height: 308px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: left;
+  color: #3C3C43;
+}
+
+.iphone-image {
+  width: 580px;
+  height: 469px;
+  gap: 10px;
+  border-radius: 60px 0px 0px 0px;
+  opacity: 0px;
 }
