slicing news main page

--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .logo-search {
@@ -307,19 +307,19 @@ body {
   top: 40%;
   /* transform: translateY(-50%); */
   pointer-events: none;
-  width: 24px; 
-  height: 24px; 
+  width: 24px;
+  height: 24px;
 }
 
 .input-search {
   margin-top: 8px;
   padding: 8px 40px;
-  border: 1px solid #BDBDBD;
+  border: 1px solid #bdbdbd;
   border-radius: 24px;
   width: 280px;
   height: 40px;
   font-size: 16px;
-  color:  #616161;
+  color: #616161;
 }
 
 .login-user {
@@ -363,11 +363,188 @@ body {
   font-size: 16px;
   font-weight: 600;
   color: #222325;
-  line-height: 19,6px;
-
+  line-height: 19, 6px;
 }
 
 .star-icon-login {
   width: 20px;
   height: 20px;
 }
+
+.main-container-bacaan {
+  width: 100%;
+  height: 125px;
+  padding: 24px 56px;
+  gap: 60px;
+  opacity: 0px;
+  display: flex;
+  /* border: 1px solid black; */
+}
+
+.container-bacaan {
+  width: 1300px;
+  height: 100px;
+  gap: 19px;
+  opacity: 0px;
+  /* border: 1px solid blue; */
+}
+
+.container-bacaan h4 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  color: #1d2433;
+}
+
+.topic {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+}
+
+.topic-category {
+  padding: 4px;
+}
+
+.topic-category button {
+  gap: 10px;
+  width: auto;
+  height: 34px;
+  padding: 3px 6px;
+  border-radius: 24px;
+  border: none;
+  pointer-events: none;
+  /* cursor: pointer; */
+}
+
+.all-topic {
+  margin-right: 20px;
+  gap: 8px;
+  color: #005555;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 22px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.container-popular {
+  width: 400px;
+  height: 82vh;
+  padding: 16px 0px 0px 0px;
+  gap: 24px;
+  opacity: 0px;
+  border: 1px solid red;
+}
+
+.container-popular h4 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  color: #1d2433;
+}
+
+.all-news {
+  width: 1300px;
+  height: auto;
+  margin-left: 57px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  border: 1px solid purple;
+}
+
+.news-one {
+  display: flex;
+  width: 1300px;
+  gap: 24px;
+}
+
+.news-two {
+  display: flex;
+  width: 1300px;
+  gap: 24px;
+}
+
+.news-three {
+  display: flex;
+  width: 1300px;
+  gap: 24px;
+}
+
+.news-four {
+  display: flex;
+  width: 1300px;
+  gap: 24px;
+}
+
+.news-five {
+  display: flex;
+  width: 1300px;
+  gap: 24px;
+}
+
+.news-six {
+  display: flex;
+  width: 1300px;
+  gap: 24px;
+}
+
+.news-image {
+  width: 225px;
+  height: 150px;
+  border-radius: 5px;
+}
+
+.news-content {
+  width: 1300px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid black; */
+}
+
+.news-date {
+  width: 652px;
+  height: 20px;
+  color: #4a505c;
+  font-size: 14px;
+  line-height: 19.6px;
+}
+
+.news-title {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 25.2px;
+  margin: 10px 0px;
+}
+
+.news-publisher {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin: 5px 0px;
+  /* border: 1px solid tomato; */
+}
+
+.news-publisher p {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22.4px;
+}
+
+.news-mark {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0px;
+}
+
+.news-mark button {
+  width: 55px;
+  height: 26px;
+  border: none;
+  border-radius: 24px;
+  pointer-events: none;
+}
+
