--- a/css/style.css
+++ b/css/style.css
@@ -430,29 +430,164 @@ body {
 }
 
 .container-popular {
-  width: 400px;
-  height: 82vh;
-  padding: 16px 0px 0px 0px;
+  width: 415px;
+  height: 800px;
+  padding: 16px;
   gap: 24px;
   opacity: 0px;
-  border: 1px solid red;
 }
 
-.container-popular h4 {
+.popular-article {
+  width: 380px;
+  height: 540px;
+  gap: 19px;
+}
+
+.popular-article h4 {
   font-size: 24px;
   font-weight: 700;
   line-height: 28px;
   color: #1d2433;
 }
 
+/* .popular-article-frame {
+  width: 380px;
+  height: 150px;
+  gap: 16px;
+} */
+
+.article-tag {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.article-tag-number {
+  width: 35px;
+  height: 30px;
+  padding: 4px 8px;
+  margin-top: 10px;
+  gap: 10px;
+  border-radius: 8px;
+  background: #FFFFFF;
+}
+
+.article-date {
+  font-size: 14px;
+  line-height: 19.6px;
+  margin-top: 10px;
+  color: #4A505C;
+}
+
+.article-title {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22.4px;
+  color: #1D2433;
+  margin: 5px 0px;
+}
+
+.article-publisher {
+  display: flex;
+  gap: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 19.6px;
+  color: #4A505C;
+}
+
+.article-one {
+  width: 380px;
+  height: 150px;
+  background: #FDF0CC;
+  border-radius: 16px;
+}
+
+.article-two {
+  width: 380px;
+  height: 150px;
+  background: #E5EEEE;
+  border-radius: 16px;
+}
+
+.article-three   {
+  width: 380px;
+  height: 150px;
+  background: #FDF0CC;
+  border-radius: 16px;
+}
+
+.article-content {
+  margin: 10px;
+  width: 360px;
+  height: 130px;
+}
+
+.recommend {
+  width: 380px;
+  height: 200px;
+  font-size: 24px;
+  font-weight: 700;
+  font-weight: 28.8px;
+  color: #1D2433;
+}
+
+.publisher-recommendation {
+  margin-top: 20px;
+}
+
+.publisher-one {
+  display: flex;
+  justify-content: space-between;
+}
+
+.publisher-two {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0px;
+}
+
+.publisher-three {
+  display: flex;
+  justify-content: space-between;
+}
+
+.publisher-profile {
+  display: flex;
+  gap: 8px;
+}
+
+.publisher-profile p {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 25.2px;
+  color: #1D2433;
+}
+
+.button-profile-publisher {
+  width: 120px;
+  height: 32px;
+  border: 1px solid #005555;
+  border-radius: 24px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 19.6px;
+  color: #005555;
+  background: none;
+  cursor: pointer;
+}
+
 .all-news {
   width: 1300px;
   height: auto;
   margin-left: 57px;
+  padding-bottom: 40px;
   display: flex;
   flex-direction: column;
   gap: 24px;
-  border: 1px solid purple;
+  /* border: 1px solid purple; */
 }
 
 .news-one {
@@ -548,3 +683,15 @@ body {
   pointer-events: none;
 }
 
+footer {
+  width: 100%;
+  height: 49px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16.8px;
+  color: #6C717A;
+  border-top: 1px solid #E1E6EF
+}
