--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 94vh;
 }
 
 .median-logo {
@@ -170,6 +170,7 @@ body {
   font-weight: 500;
   text-align: left;
   color: #1d2433;
+  cursor: pointer;
 }
 
 .copyright {
@@ -208,6 +209,7 @@ body {
   line-height: 22.4px;
   border-radius: 24px;
   padding: 8px, 26px;
+  border: none;
   cursor: pointer;
 }
 
@@ -351,6 +353,7 @@ body {
   align-items: center;
   margin-left: 20px;
   gap: 11px;
+  cursor: pointer;
 }
 
 .profile .user-iamge {
@@ -485,6 +488,7 @@ body {
   line-height: 22.4px;
   color: #1D2433;
   margin: 5px 0px;
+  cursor: pointer;
 }
 
 .article-publisher {
@@ -494,6 +498,7 @@ body {
   font-weight: 500;
   line-height: 19.6px;
   color: #4A505C;
+  cursor: pointer;
 }
 
 .article-one {
@@ -653,6 +658,7 @@ body {
   font-weight: 600;
   line-height: 25.2px;
   margin: 10px 0px;
+  cursor: pointer;
 }
 
 .news-publisher {
@@ -660,6 +666,7 @@ body {
   align-items: center;
   gap: 8px;
   margin: 5px 0px;
+  cursor: pointer;
   /* border: 1px solid tomato; */
 }
 
